--- a/docs/visual-basic/misc/bc30201.md
+++ b/docs/visual-basic/misc/bc30201.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30201
 ms.assetid: 8a88e595-b590-4b05-bed3-8d04ba12d838
-ms.openlocfilehash: a76c662860618c1d9a03249326c486c39f515931
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: f03abbab2c8869cf890f97ff7adc2d8140909659
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33606677"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54634326"
 ---
 # <a name="expression-expected"></a>식이 필요합니다.
 `+` 또는 `=` 등의 연산자에는 오른쪽 피연산자에 대한 식이 필요하지만 인식할 수 있는 식이 없습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "33606677"
   
 -   연산자의 오른쪽 피연산자에 대한 유효한 식을 제공합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 및 식](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)  
- [대입 연산자 (Visual Basic)](~/docs/visual-basic/language-reference/operators/assignment-operators.md)
+## <a name="see-also"></a>참고자료
+- [연산자 및 식](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [할당 연산자 (Visual Basic)](~/docs/visual-basic/language-reference/operators/assignment-operators.md)
