--- a/docs/visual-basic/misc/bc30230.md
+++ b/docs/visual-basic/misc/bc30230.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30230
 ms.assetid: bccd61f7-cb47-4101-9b35-743c97876630
-ms.openlocfilehash: b11895fa9e2a5e0a8a148b0bf5e4156bfa3eee84
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3037d29af7b13fa2aff5775107be4a32a85a09c9
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770106"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54514619"
 ---
 # <a name="inherits-not-valid-in-modules"></a>모듈에는 'Inherits'를 사용할 수 없습니다.
 `Inherits` 문이 모듈 내에서 발생합니다. 모듈이 클래스에서 상속할 수 없습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53770106"
   
 -   `Inherits` 문을 제거하거나 모듈을 클래스로 다시 입력합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Inherits 문](../../visual-basic/language-reference/statements/inherits-statement.md)  
- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a>참고자료
+- [Inherits 문](../../visual-basic/language-reference/statements/inherits-statement.md)
+- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
