--- a/docs/visual-basic/misc/bc30632.md
+++ b/docs/visual-basic/misc/bc30632.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30632
 ms.assetid: 0c3dd065-566b-485c-9996-6177eb0fde39
-ms.openlocfilehash: 69b1ea03470950f7edc71316371e54f69736239d
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 69b225ce6f1a6719ecb87a8e9774785b55ac1e1c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53778380"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54631479"
 ---
 # <a name="end-set-must-be-preceded-by-a-matching-set"></a>'End Set'은 짝이 되는 'Set' 뒤에 와야 합니다.
-`End Set`은 `Set` 속성 프로시저를 종료하는 데 사용됩니다. `End Set` 속성 프로시저 외부에서 `Set` 구문이 발생했습니다.  
+`End Set` 는 `Set` 속성 프로시저를 종료하는 데 사용됩니다. `End Set` 속성 프로시저 외부에서 `Set` 구문이 발생했습니다.  
   
  **오류 ID:** BC30632  
   
@@ -25,6 +25,6 @@ ms.locfileid: "53778380"
   
 2.  `Set` 속성 프로시저가 `Set` 키워드로 시작하고 `End Set` 구문으로 끝나는지 확인합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Property 문](../../visual-basic/language-reference/statements/property-statement.md)  
+## <a name="see-also"></a>참고자료
+- [Property 문](../../visual-basic/language-reference/statements/property-statement.md)
 
