--- a/docs/visual-basic/misc/bc30911.md
+++ b/docs/visual-basic/misc/bc30911.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30911
 ms.assetid: b690be0c-4dca-4f79-88ed-4ee3e3f1f90b
-ms.openlocfilehash: 119d058a8776e71a0262da8df35d916fc12c1c66
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 303f56bcde66b81d10ecb5454a28b45d809f5540
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53762671"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54518048"
 ---
 # <a name="ltkeywordgt-accessor-of-ltpropertynamegt-is-obsolete-lterrormessagegt-visual-basic-error"></a>'&lt;키워드&gt;'접근자는 '&lt;propertyname&gt;'는 사용 되지 않습니다. '&lt;errormessage&gt;' (Visual Basic 오류)
 문에서 해당 프로시저를 <xref:System.ObsoleteAttribute> 특성 및 지시문으로 표시하여 오류로 처리하는 속성을 읽거나 쓰려고 합니다.  
@@ -29,7 +29,7 @@ ms.locfileid: "53762671"
   
 3.  이 메시지를 생성한 방법(읽기 또는 쓰기)으로 해당 속성에 액세스하지 않아야 합니다.  
   
-## <a name="see-also"></a>참고 항목  
-   
-   
- [속성 프로시저](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+## <a name="see-also"></a>참고자료
+
+
+- [속성 프로시저](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
