--- a/docs/visual-basic/misc/bc31503.md
+++ b/docs/visual-basic/misc/bc31503.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31503
 ms.assetid: 9979f794-5d6d-4cc6-a2ec-303078626c0f
-ms.openlocfilehash: 4198730f84377b5c419d0341e440ef58ddf066cb
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 859ab32fe19ceacd0532265b4afb864f63ead92a
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761162"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54609540"
 ---
 # <a name="lttypenamegt-cannot-be-used-as-an-attribute-because-it-is-not-a-class"></a>'&lt;typename&gt;' 클래스가 아니므로 특성으로 사용할 수 없습니다.
 클래스가 아닌 형식을 특성으로 사용하려고 했습니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53761162"
   
 1.  사용자 지정 특성을 `System.Attribute`에서 파생되는 클래스로 정의합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+## <a name="see-also"></a>참고자료
+- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
