--- a/docs/visual-basic/misc/bc31511.md
+++ b/docs/visual-basic/misc/bc31511.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31511
 ms.assetid: f8c958f6-58a4-4aff-b8c3-f2e9481e8132
-ms.openlocfilehash: d71f1a2497b1f171578b057b4f0a2632076fb17c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 01e6e971bdd354997b60c648543817abfe64957f
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53758419"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54633818"
 ---
 # <a name="attribute-member-ltmembernamegt-cannot-be-the-target-of-an-assignment-because-it-is-not-declared-public"></a>특성 멤버 '&lt;membername&gt;' 'Public' 선언 되지 않았으므로 할당 대상일 수 없습니다
 특성의 전용 멤버에 값을 할당하려고 했습니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "53758419"
   
 2.  개발한 사용자 지정 특성을 사용하는 경우 특성 멤버의 액세스 한정자를 `Public`으로 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)  
- [공용](../../visual-basic/language-reference/modifiers/public.md)
+## <a name="see-also"></a>참고자료
+- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- [공용](../../visual-basic/language-reference/modifiers/public.md)
