--- a/docs/visual-basic/misc/bc42203.md
+++ b/docs/visual-basic/misc/bc42203.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42203
 ms.assetid: 26a3fa34-ec5d-4817-a947-3959446a924a
-ms.openlocfilehash: b2f0daf1a2d5b5ec97ad2e127c53e0dd6843cad4
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: c0e4b7a1264918c055048dbedfa44068bfca537d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761448"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54596035"
 ---
 # <a name="project-ltprojectnamegt-requires-a-reference-to-version-ltversionnumber1gt-of-assembly-ltassemblynamegt-but-references-version-ltversionnumber2gt-of-assembly-ltassemblynamegt-visual-basic-warning"></a>프로젝트 '&lt;projectname&gt;'버전에 대 한 참조가 필요 합니다.'&lt;versionnumber1&gt;'의 어셈블리'&lt;assemblyname&gt;', 참조 버전 '&lt; versionnumber2&gt;'의 어셈블리'&lt;assemblyname&gt;' (Visual Basic 경고)
 프로젝트 '\<프로젝트 이름 >' 버전에 대 한 참조가 필요 '\<versionnumber1 >' 어셈블리의 '\<assemblyname >', 참조 버전 '\<versionnumber2 >' 어셈블리의 '\< assemblyname >'입니다. 버전에 대 한 참조가 '\<versionnumber1 >' 내보내집니다.  
@@ -29,9 +29,9 @@ ms.locfileid: "53761448"
   
 -   이전 버전의 어셈블리에 대한 직접 참조를 제거하거나 이후 버전을 참조하도록 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [공용 언어 런타임의 어셈블리](../../framework/app-domains/assemblies-in-the-common-language-runtime.md)  
-  
- [프로젝트의 참조 관리](/visualstudio/ide/managing-references-in-a-project)  
+## <a name="see-also"></a>참고자료
+- [공용 언어 런타임의 어셈블리](../../framework/app-domains/assemblies-in-the-common-language-runtime.md)
 
- 
+- [프로젝트의 참조 관리](/visualstudio/ide/managing-references-in-a-project)
+
+
